--- a/config/database.yml
+++ b/config/database.yml
@@ -42,6 +42,10 @@ development:
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
   #port: 5432
+  test:
+  adapter: postgresql
+  database: travis_ci_test
+
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
