--- a/config/database.yml
+++ b/config/database.yml
@@ -42,10 +42,9 @@ development:
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
   #port: 5432
-  test:
-  adapter: postgresql
-  database: travis_ci_test
-
+test:
+    adapter: postgresql
+    database: travis_ci_test
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -58,10 +57,7 @@ development:
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: INeedSomeSpace-BE_test
+# Do not set this db to the same as development or production
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
