--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@
 /public/assets
 .byebug_history
 
+/spec/cassettes
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
