--- a/spec/cassettes/Apod_API/should_return_image_of_the_day.yml
+++ b/spec/cassettes/Apod_API/should_return_image_of_the_day.yml
@@ -21,13 +21,15 @@ http_interactions:
       Server:
       - openresty
       Date:
-      - Sat, 13 Apr 2019 17:33:29 GMT
+      - Mon, 15 Apr 2019 20:15:21 GMT
       Content-Type:
       - application/json
-      Content-Length:
-      - '929'
+      Transfer-Encoding:
+      - chunked
       Connection:
       - keep-alive
+      Vary:
+      - Accept-Encoding
       X-Ratelimit-Limit:
       - '1000'
       X-Ratelimit-Remaining:
@@ -43,19 +45,21 @@ http_interactions:
       Strict-Transport-Security:
       - max-age=31536000; preload
     body:
-      encoding: UTF-8
-      string: '{"copyright":"Roberto\nColombari","date":"2019-04-13","explanation":"Rigil
-        Kentaurus is the bright star near the top of this broad southern skyscape.
-        Of course it''s probably better known as Alpha Centauri, nearest star system
-        to the Sun. Below it sprawls a dark nebula complex. The obscuring interstellar
-        dust clouds include Sandqvist catalog clouds 169 and 172 in silhouette against
-        the rich starfields along the southern Milky Way. Rigil Kent is a mere 4.37
-        light-years away, but the dusty dark nebulae lie at the edge of the starforming
-        Circinus-West molecular cloud about 2,500 light-years distant. The wide-field
-        of view spans over 12 degrees (24 full moons) across southern skies.","hdurl":"https://apod.nasa.gov/apod/image/1904/sandqvist169_colombari.jpg","media_type":"image","service_version":"v1","title":"Rigil
-        Kentaurus and Sandqvist 169","url":"https://apod.nasa.gov/apod/image/1904/sandqvist169_colombari1024.jpg"}
+      encoding: ASCII-8BIT
+      string: '{"date":"2019-04-15","explanation":"Do you see the dolphin-shaped cloud
+        on Jupiter? The cloud was visible last year during perijove 16, the sixteenth
+        time that NASA''s robotic spacecraft Juno passed near Jupiter since it arrived
+        in mid-2016.  During each perijove, Juno passes near a slightly different
+        part of Jupiter''s cloud tops.  The dolphin shape may be surprising but is
+        not scientifically significant -- clouds on Jupiter and Earth are constantly
+        shifting and can temporarily mimic many familiar shapes. The cloud appears
+        in Jupiter''s South Temperate Belt (STB), a band of dark and dropping clouds
+        that rings the planet and also contains Oval BA, dubbed Red Spot Jr.  The
+        featured image was digitally processed to enhance color and contrast.  Juno''s
+        next swoop near Jupiter -- perijove 20 -- will occur on late May.","hdurl":"https://apod.nasa.gov/apod/image/1904/JupiterDolphin_JunoEichstadt_3064.jpg","media_type":"image","service_version":"v1","title":"Enhanced:
+        The Dolphin Cloud on Jupiter","url":"https://apod.nasa.gov/apod/image/1904/JupiterDolphin_JunoEichstadt_1080.jpg"}
 
 '
     http_version: 
-  recorded_at: Sat, 13 Apr 2019 17:33:26 GMT
+  recorded_at: Mon, 15 Apr 2019 20:15:21 GMT
 recorded_with: VCR 4.0.0
