--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 
 /public/assets
 .byebug_history
+/spec/cassettes
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
